Add new docs about Java thread and JVM